set(MYSTL_SRC MySTL.cpp)
set(STANDARD_SRC standard/util.cpp standard/container.cpp StandardSTL.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/STL/include)
include_directories(${PROJECT_SOURCE_DIR}/STL/standard)
add_executable(mystl ${MYSTL_SRC})
add_executable(standardstl ${STANDARD_SRC})